Correction of the style on the Collapse component

--- a/src/pages/About.css
+++ b/src/pages/About.css
@@ -4,12 +4,12 @@
 }
 
 @media (min-width: 1025px) {
-    .dropdown {
+    .aboutContainer .dropdown {
         height: 47px;
         font-size: 24px;
     }
 
-    .collapseDescription {
+    .aboutContainer .collapseDescription {
         font-size: 24px;
     }
 }
